package com.municipality.library.entity;

// Separate enum file for LoanStatus
public enum LoanStatus {
    ACTIVE,
    RETURNED,
    OVERDUE,
    LOST
}
